@@ -22,7 +22,7 @@ libapbs_la_SOURCES = apbs_link.c
 libapbs_la_LIBADD  = ${GEN_LIBS} ${FEM_LIBS} ${PMG_LIBS}
 libapbs_la_LDFLAGS = -version-info ${APBS_VERSION}
 
-INCLUDES         = -I../generic -I../mg -I../fem @inc_list@
+INCLUDES         = -I${top_srcdir}/src/generic -I${top_srcdir}/src/mg -I${top_srcdir}/src/fem @inc_list@
 AM_CFLAGS        = @wall_pedantic@
 LDFLAGS          = @LDFLAGS@ @FLIBS@
 
