@@ -14,12 +14,12 @@ THISLIB = fem
 
 noinst_LTLIBRARIES = libapbsfem.la
 libapbsfem_la_SOURCES  = vfetk.c vcsm.c vpee.c dummy.c
-INCLUDES           = -I../generic -I../mg @inc_list@
+INCLUDES           = -I${top_srcdir}/src/generic -I${top_srcdir}/src/mg @inc_list@
 AM_CFLAGS          = @wall_pedantic_ansi@
 CFLAGS             = @CFLAGS@
 LDFLAGS          = @LDFLAGS@ @FLIBS@
 
 
 all-local:
-	-cp -p ${top_srcdir}/src/${THISLIB}/apbs/*.h ../aaa_inc/apbs/.
+	-cp -p ${top_srcdir}/src/${THISLIB}/apbs/*.h ${top_srcdir}/src/aaa_inc/apbs/.
 
